# CodeDoctor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  gitleaks.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  conventional-commits.yml  gitleaks.yml  publish.yml  release-please.yml  release.yml
src/codedoctor/: cli.py  config.py  report.py  runner.py  storage.py  updater.py
tests/: test_smoke.py
