[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "codedoctor"
version = "0.1.0"
description = "Beginner-friendly codebase doctor: lint, format, type-check, security and tests."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Patrick Faint" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
codedoctor = "codedoctor.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python-version = "3.12"
warn_return_any = true
wanr_unused_configs = true
disallow_untyped_defs = false